tweak: fix badge layout for overflowing badges
Visit button is now the title button, so badges can
flex-wrap if needed

--- a/src/app.css
+++ b/src/app.css
@@ -50,3 +50,15 @@
 img {
 	image-rendering: pixelated;
 }
+
+/* https://stackoverflow.com/a/66436651 */
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
